updated gitignore rules to exclude data files

--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,11 @@ cython_debug/
 
 # VS Code settings
 .vscode/
+
+# Data pipeline directories - keep structure but ignore content
+data/*
+!data/.gitkeep
+output/*
+!output/.gitkeep
+logs/*
+!logs/.gitkeep
